--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/benmotyka/elearning-security#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -28,6 +29,7 @@
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
-    "mongoose-autopopulate": "^0.13.0"
+    "mongoose-autopopulate": "^0.13.0",
+    "uuid": "^8.3.2"
   }
 }
