--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/benmotyka/elearning-security#readme",
   "dependencies": {
-    "@sendgrid/mail": "^7.4.4",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -33,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.20",
     "mongoose-autopopulate": "^0.13.0",
+    "nodemailer": "^6.9.9",
     "uuid": "^8.3.2",
     "winston": "^3.6.0"
   }
